Main POM cleanup